Add example pattern matching enhancements jdk 21